Minor adjustments in settings bundle strings ; Fixed bug when the user submits a arrival day before departure or vice-versa ; Changed planMyTrip button text ; Number of items includes the medicine

--- a/malaria-ios/SupportingFiles/SettingsBundle/Settings.bundle/Root.plist
+++ b/malaria-ios/SupportingFiles/SettingsBundle/Settings.bundle/Root.plist
@@ -61,10 +61,10 @@
 				<string>Frequent</string>
 				<string>Normal</string>
 				<string>Minimal</string>
-				<string>Off</string>
+				<string>None</string>
 			</array>
 			<key>Title</key>
-			<string>Trip reminder frequency:</string>
+			<string>Trip reminder frequency</string>
 			<key>Type</key>
 			<string>PSMultiValueSpecifier</string>
 			<key>Key</key>
